# pugixmlTest

./: CMakeLists.txt  README.md  enc_config.xml  main.cpp
